--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Antonio S. Cruz</title>
   </head>
   <body>
-    <h1>Olá, Seja bem vindo ao mei site!</h1>
+    <h1>Olá, Seja bem vindo ao meu site!</h1>
     <br />
     <h2>Aqui você encontra, alguns dos meus projetos.</h2>
   </body>
